# hafas-client

./: Cargo.toml  index.js  package.json  readme.md  rest-exe-example.js  rest-exe.js
docs/: readme.md
examples/: journeys.rs  locations.rs  refresh_journey.rs  suggestions.rs
lib/: default-profile.js  errors.js  request.js  rest-exe-errors.js
p/avv/: index.js
p/bart/: index.js
p/bls/: index.js
p/bvg/: index.js
p/cfl/: index.js
p/cmta/: index.js
p/dart/: index.js
p/db/: index.js
p/db-busradar-nrw/: index.js
p/insa/: index.js
p/invg/: index.js
p/irish-rail/: index.js
p/ivb/: index.js
p/kvb/: index.js
p/mobil-nrw/: index.js
p/mobiliteit-lu/: index.js
p/nahsh/: index.js
p/nvv/: index.js
p/oebb/: index.js
p/pkp/: index.js
p/rejseplanen/: index.js
p/rmv/: index.js
p/rsag/: index.js
p/saarfahrplan/: index.js
p/salzburg/: index.js
p/sbahn-muenchen/: index.js
p/sncb/: index.js  index.js.rej
p/stv/: index.js
p/svv/: index.js
p/tpg/: index.js
p/vbb/: index.js
p/vbn/: index.js
p/vkg/: index.js
p/vmt/: index.js
p/vor/: index.js
p/vos/: index.js
p/vrn/: index.js
p/vsn/: index.js
p/vvt/: index.js
p/vvv/: index.js
p/zvv/: index.js
parse/: arrival-or-departure.js  date-time.js  find-remarks.js  hint.js  journey-leg.js  journey.js  line.js  location.js  stopover.js  subscription.js  warning.js
parse-rest/: trip.js
src/: client.rs  error.rs  format.rs  lib.rs
src/api/: journeys.rs  locations.rs  mod.rs  refresh_journey.rs  suggestions.rs
src/parse/: arrival_or_departure.rs  common.rs  date.rs  journey.rs  journeys_response.rs  leg.rs  line.rs  load_factor.rs  location.rs  locations_response.rs  mod.rs  operator.rs  polyline.rs  products.rs  remark.rs  stopover.rs  suggestions_response.rs
src/profile/: db.rs  mod.rs  sncf.rs
src/requester/: hyper.rs  mod.rs
test/: index.js  vrn-subscription-journey.js  vrn-subscription.js
test/e2e/: cfl.js  vrn.js
test/e2e/lib/: journeys-station-to-poi.js  validators.js
test/fixtures/: vrn-subscription-journey.js  vrn-subscription-journey.json  vrn-subscription.js  vrn-subscription.json
test/parse/: date-time.js
tools/debug-cli/: cli.js
