[package]
name = "hafas_client"
version = "6.0.0"
authors = [
	"Jannis R <mail@jannisr.de>",
	"Julius Tens <mail@juliustens.eu>",
	"n0emis <n0emis@noemis.me>",
	"em0lar <hello@em0lar.de>",
	"Adrian Böhme <hannsadrian@gmail.com> (https://github.com/Adwirawien)"
]
edition = "2018"
description = "Client for HAFAS public transport APIs."
repository = "https://github.com/public-transport/hafas-client.git"
license = "ISC"
keywords = ["hafas", "public", "transport", "transit", "api", "http"]
categories = ["api-bindings"]
# todo: exclude
publish = false # todo: remove

[dependencies]
md-5 = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
hyper-rustls = { version = "0.23", optional = true, features = [ "http1" ] }
hyper = { version = "0.14", optional = true }
async-trait = "0.1"
chrono = "0.4"
ijson = "0.1"

[features]
default = [ "hyper-requester", "db-profile" ]
hyper-requester = [ "hyper-rustls", "hyper" ]
db-profile = []

[dev-dependencies]
tokio = { version = "1.15", features = [ "rt-multi-thread", "macros" ] }
